--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.0.RELEASE'
-		springCloudStarterParentTrain = 'Brixton.M3'
-		scsVersion = '1.0.0.RELEASE'
+		springBootVersion = '1.3.5.RELEASE'
+		springCloudStarterParentTrain = 'Brixton.RELEASE'
+		scsVersion = '1.0.2.RELEASE'
+		sleuthVersion = '1.0.0.RC2'
 		junitVersion = '4.12'
 		thymeleafExtras = '2.1.2.RELEASE'
 		dependencyPlugin = '0.5.3.RELEASE'
@@ -85,7 +86,9 @@ repositories {
 
 dependencyManagement {
 		imports { mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
-		//mavenBom "org.springframework.cloud:spring-cloud-starter-parent:${springCloudStarterParentTrain}"
+				  mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.1.0.RELEASE"
+                  mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR1"
+		//mavenBom "org.springframework.cloud:spring-cloud-starter-parent:${springCloudStarterParentTrain}"           
 	}
 }
 
@@ -95,11 +98,14 @@ dependencies {
 		compile "org.springframework.boot:spring-boot-starter-web"
 		compile "org.springframework.boot:spring-boot-starter-actuator"
 		compile "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
-		compile "org.springframework.cloud:spring-cloud-starter-sleuth:1.0.0.M2"
-		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-config-client:${scsVersion}"
-		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry:${scsVersion}"
-		compile "io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker:${scsVersion}"
-
+		//compile "org.springframework.cloud:spring-cloud-starter-sleuth:1.0.0.M2"
+		compile "org.springframework.cloud:spring-cloud-stream-binder-rabbit"        
+        compile "org.springframework.cloud:spring-cloud-sleuth-stream"
+        compile "org.springframework.boot:spring-boot-starter-aop:${springBootVersion}"
+        compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
+		compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
+	    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+		
 		//test packages
 		testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 		testCompile "junit:junit:$junitVersion"
